# A.CloudAI-fl-flower

./: .dockerignore  .gitignore  Dockerfile  README.md  coco128_custom.yaml  former.yaml  former_0.yaml  former_1.yaml  pyproject.toml  requirements.txt
datasets/former_dataset/: classes.txt  notes.json
datasets/former_dataset/labels/: 40bd1f89-000000000660.txt  5b82a61f-000000000659.txt  5c19f9e6-000000000658.txt  6f5fb424-000000000663.txt  778c3520-000000000657.txt  7e87d2ea-000000000661.txt  bb629106-000000000656.txt
datasets/former_dataset_0/labels/: 19151546-000000000662.txt  75a3d21d-000000000655.txt  94273997-000000000653.txt  a07a12ea-000000000652.txt  f1cc6311-000000000654.txt
datasets/former_dataset_1/labels/: 52a0d81e-000000000651.txt  (+1 more)
flwr_yolo/: client.py  server.py  utils.py
kube/: checkpoint_pv.yaml  checkpoint_pvc.yaml  client_deployment.yaml  server-deployment.yaml  superlink-deployment.yaml  superlink-service.yaml  supernode_deployment.yaml
kube/flower_obj/: client_1_deployment.yaml  client_2_deployment.yaml  server_deployment.yaml
kube/flower_study/: checkpoint_pv.yaml  checkpoint_pvc.yaml  client_1_cronjob.yaml  client_1_custom_dataset_cronjob.yaml  client_1_deployment.yaml  client_2_cronjob.yaml  client_2_custom_dataset_cronjob.yaml  client_2_deployment.yaml  server_deployment.yaml  server_service.yaml
scripts/: auto_annotate.py  get_dataset_img_count.py  predict_test.py  seg_test.py  utils.py  yolo_label_generator.py  yolo_train.py
src/flower_obj/: README.md  client.py  dataset.py  img_test.ipynb  model.py  server.py
src/flower_study/: client.py  client_custom_dataset.py  predict_test.py  server.py  server_checkpoint.py  utils.py
src/flower_torch/: client.py  server.py
src/flower_yolo/: client.py  server.py  utils.py
(+4 files in other folders)
