[tool.poetry]
name = "flower-study"
version = "0.1.0"
description = ""
authors = ["seo.youngchae <seo.youngchae@lgepartner.com>"]
readme = "README.md"
packages = [{include = "flower_study", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.17.0"
flwr-datasets = "^0.3.0"
flwr = "^1.10.0"
tensorflow-datasets = "^4.9.6"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
